01-admins/base/01-cicd-admin-config/01-networkpolicy-deny-other-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cicd-deny-other-namespaces
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
